--- a/Pluriparous CLI Landing Page/package.json
+++ b/Pluriparous CLI Landing Page/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start", 
+    "build": "next build"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.0",
